--- a/app.json
+++ b/app.json
@@ -3,6 +3,10 @@
     "description": "deploy mysql to heroku",
     "keywords": ["mysql"],
     "env": {
+        "PROTOCOL": {
+            "description": "mysql protocol, tcp",
+            "value": "tcp"
+        }
     },
     "repository": "https://github.com/xiezhao/dockerfile-mysql",
     "stack": "container"
